# dolkindas

./: .env  .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  run.sh
lib/: commands.hpp  getenv.cpp  getenv.hpp
mod/: getenv.cxx
src/: bot  commands.cpp  commands.hpp  main.cpp  test.cpp
